test: cover recurring cleanup leader fallback
Signed-off-by: Jonathan Putney <jonathan@putney.io>